templates/aws/charts/engines/argo_rollouts/argo_rollouts_demo/yamls/new_rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: argo-rollouts
spec:
  replicas: 5
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:green
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
 #     canaryService: canary-service-demo
 #     stableService: stable-service-demo
 #     trafficRouting:
 #       alb:
 #         ingress: ingress-demo
 #         rootService: root-service-demo
 #         servicePort: 80
      steps:

      - setWeight: 20
      - pause: {}

      - setWeight: 40
      - pause: {duration: 10s}

      - setWeight: 60
      - pause: {duration: 10s}

      - setWeight: 80
      - pause: {duration: 10s}

      - setWeight: 100
      - pause: {duration: 10s}
